--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,7 +1,9 @@
+@use "colors" as *;
+
 // Themes
-@mixin themify($themes) {
+@mixin themed() {
   @each $theme, $map in $themes {
-    .theme-#{$theme} & {
+    .theme--#{$theme} & {
       $theme-map: () !global;
       @each $key, $submap in $map {
         $value: map-get(map-get($themes, $theme), '#{$key}');
@@ -13,6 +15,6 @@
   }
 }
 
-@function themed($key) {
+@function t($key) {
   @return map-get($theme-map, $key);
 }
