Initial folder structure for Navbar and Avatar

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,4 +1,5 @@
 @use "colors" as *;
+@use "breakpoints" as *;
 
 // Themes
 @mixin themed() {
@@ -17,4 +18,40 @@
 
 @function t($key) {
   @return map-get($theme-map, $key);
+}
+
+// Breakpoints
+// Small devices
+@mixin sm {
+  @media (min-width: #{$screen-sm-min}) {
+      @content;
+  }
+}
+
+// Medium devices
+@mixin md {
+  @media (min-width: #{$screen-md-min}) {
+      @content;
+  }
+}
+
+// Large devices
+@mixin lg {
+  @media (min-width: #{$screen-lg-min}) {
+      @content;
+  }
+}
+
+// Extra large devices
+@mixin xl {
+  @media (min-width: #{$screen-xl-min}) {
+      @content;
+  }
+}
+
+// Dynamic size
+@mixin rwd($screen) {
+  @media (min-width: ($screen+'px')) {
+      @content;
+  }
 }
