Initial work for Avatar and added jsconfig for using relative path

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -4,7 +4,7 @@ $themes: (
     chatTileHover: #2A3942,
     chatWindowBg: #0B131A,
     danger: #EA1E38,
-    greenActive: #00A884,
+    activeBadge: #00A884,
     inputBg: #202C33,
     inputPlaceholder: #8696A0, 
     mainBg: #101B21,
@@ -22,7 +22,7 @@ $themes: (
     chatTileHover: #F0F2F5,
     chatWindowBg: #EFE9E2,
     danger: #EA1E38,
-    greenActive: #25D366,
+    activeBadge: #25D366,
     inputBg: #F0F2F5,
     inputPlaceholder: #667781, 
     mainBg: #E1E1DE,
