--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -4,7 +4,7 @@
 // Themes
 @mixin themed() {
   @each $theme, $map in $themes {
-    .theme--#{$theme} & {
+    .theme__#{$theme} & {
       $theme-map: () !global;
       @each $key, $submap in $map {
         $value: map-get(map-get($themes, $theme), '#{$key}');
